--- a/IME2014_percentile rank gap abstract.tex
+++ b/IME2014_percentile rank gap abstract.tex
@@ -10,7 +10,7 @@
 {\large\bf Percentile rank gap as a measure of dependence across percentiles of a copula}\\
 
 \vspace{0.5cm}
-\underline{Weihao Choo$^1$}\\
+Weihao Choo$^1$\\
 
 \vspace{0.5cm}
 {\it  $^1$Macquarie University, Sydney}
@@ -20,9 +20,12 @@
 
 {\bf Abstract}
 
-This paper proposes ``percentile rank gap'' to quantify the dependence at various percentiles of a copula. The quantification is not always straightforward, but is important for example in stock markets where normal returns are weakly dependent but abnormal returns are highly dependent and linked to a major correction. Another example is insurance where natural catastrophe losses from related business lines happen simultaneously but typical losses are weakly dependent.
+This paper proposes ``percentile rank gap'' to quantify the dependence between the two variables at different percentiles.
+ The quantification is important for example in stock markets where normal returns are weakly dependent 
+ but abnormal returns are highly dependent and linked to a major correction. Another example is insurance where natural catastrophe losses
+  from related business lines happen simultaneously but ``average" losses are  only weakly dependent.
 
-Percentile rank gap is defined in terms of first order conditional expectations, and lies between $-1$ and $1$ at all percentiles in the unit interval. For example, the percentile rank gap of a Gumbel copula starts below $1$ then increases to $1$, reflecting imperfect lower tail dependence but perfect upper tail dependence. For a Clayton copula, percentile rank gap starts at $1$, then decreases. In general percentile rank gap of $1$ at percentile $\alpha$ implies variables are simultaneously below or above percentile $\alpha$, or ``concordant'' relative to $\alpha$. Increasing ``discordance'' and dispersion between discordant percentiles reduces percentile rank gap.
+The percentile rank gap is defined in terms of conditional expectations, and lies between $-1$ and $1$ at all percentiles. For example, the percentile rank gap of a Gumbel copula starts below $1$ then increases to $1$, reflecting imperfect lower tail dependence and perfect upper tail dependence, respectively. For a Clayton copula, percentile rank gap starts at $1$, then decreases. In general a percentile rank gap of $1$ at percentile $\alpha$ implies variables are simultaneously below or above percentile $\alpha$, or ``concordant'' relative to $\alpha$. Increasing ``discordance'' and dispersion between discordant percentiles reduces percentile rank gap.
 
 Percentile rank gap satisfies several ``coherence'' properties. Percentile rank gap lies between $-1$ and $1$, with $-1$, $0$ and $1$ representing countermonotonicity, independence and comonotonicity, respectively. In addition percentile rank gap increases with the correlation order of the copula, therefore positively dependent variables have positive percentile rank gap, and vice versa. Lastly, taking a weighted average of percentile rank gap across all percentiles yields Spearman's correlation.
 
