--- a/IME2014_percentile rank gap abstract.tex
+++ b/IME2014_percentile rank gap abstract.tex
@@ -20,16 +20,17 @@ Weihao Choo$^1$\\
 
 {\bf Abstract}
 
-This paper proposes ``percentile rank gap'' to quantify the dependence between the two variables at different percentiles.
- The quantification is important for example in stock markets where normal returns are weakly dependent
- but abnormal returns are highly dependent and linked to a major correction. Another example is insurance where natural catastrophe losses
-  from related business lines happen simultaneously but ``average" losses are  only weakly dependent.
+This paper proposes and studies a new statistic, called the ``percentile rank gap," to quantify  dependence between  two variables at different 
+percentiles.  The statistic is useful in for example in stock markets where normal returns are weakly dependent
+ but abnormal returns are highly dependent and linked often linked to a major correction. Another example is insurance where natural 
+catastrophe losses from related business lines happen simultaneously but ``average" losses are  only weakly dependent.
 
 The percentile rank gap is defined in terms of conditional expectations, and lies between $-1$ and $1$ at all percentiles.
 For example, the percentile rank gap of a Gumbel copula starts below $1$ then increases to $1$,
 reflecting imperfect lower tail dependence and perfect upper tail dependence, respectively.
 For a Clayton copula, percentile rank gap starts at $1$, then decreases.
-In general a percentile rank gap of $1$ at percentile $\alpha$ implies variables are simultaneously below or above percentile $\alpha$, or ``concordant'' relative to $\alpha$.
+In general a percentile rank gap of $1$ at percentile $\alpha$ implies variables are simultaneously below or above percentile $\alpha$, or 
+``concordant'' relative to $\alpha$.
 Increasing ``discordance'' and dispersion between discordant percentiles reduces percentile rank gap.
 
 Percentile rank gap satisfies several ``coherence'' properties.
